--- a/index.html
+++ b/index.html
@@ -50,6 +50,12 @@
         <section class="section features-section">
             <div class="container">
                 <h2 class hidden="section-title features-title">Особливості</h2>
+                <div class="information">
+                    <img class="pages" src="./images/antena.svg">
+                    <img class="pages" src="./images/time.svg.svg">
+                    <img class="pages" src="./images/comp.svg.svg">
+                    <img class="pages" src="./images/astronaut.svg.svg">
+                </div>
                 <ul class="features list">
                     <li class="item">
                         <h3 class="title">Увага до деталей</h3>
