--- a/index.html
+++ b/index.html
@@ -26,9 +26,9 @@
         </nav>
         <ul class="contact list">
         <li class="item">
-        <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
         </li>
-        <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item"><a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
         </ul>
         </div>
         </header>
@@ -50,30 +50,28 @@
         <section class="section features-section">
             <div class="container">
                 <h2 class hidden="section-title features-title">Особливості</h2>
-                <div class="information">
-                    <img class="pages" src="./images/antena.svg">
-                    <img class="pages" src="./images/time.svg.svg">
-                    <img class="pages" src="./images/comp.svg.svg">
-                    <img class="pages" src="./images/astronaut.svg.svg">
-                </div>
                 <ul class="features list">
                     <li class="item">
+                        <img class="pages" src="./images/antena.svg">
                         <h3 class="title">Увага до деталей</h3>
                         <p class="text">
                             Ідейні міркування, i навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
                     <li class="item">
+                        <img class="pages" src="./images/time.svg.svg">
                         <h3 class="title">Пунктуальність</h3>
                         <p class="text">
                             Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
                     <li class="item">
+                        <img class="pages" src="./images/comp.svg.svg">
                         <h3 class="title">Планування</h3>
                         <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="item">
+                        <img class="pages" src="./images/astronaut.svg.svg">
                         <h3 class="title">Сучасні технології</h3>
                         <p class="text">
                             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -124,6 +122,31 @@
                 </li>
             </ul>
         </div>
+    </section>
+
+    <section>
+        <h2 class="client-text">Постійні клієнти</h2>
+        <ul class="clients">
+        <li class="clients-title">
+            <img src="./images/group.svg">
+        </li>
+        <li class="clients-title">
+            <img src="./images/company.svg.svg">
+        </li>
+        <li class="clients-title">
+            <img src="./images/object1.svg.svg">
+        </li>
+        <li class="clients-title">
+            <img src="./images/group2.svg.svg">
+        </li>
+        <li class="clients-title">
+            <img src="./images/group3.svg.svg">
+        </li>
+        <li class="clients-title">
+            <img src="./images/object.svg.svg">
+        </li>
+        
+        <ul>
     </section>
     </main>
 
