--- a/index.html
+++ b/index.html
@@ -124,29 +124,30 @@
         </div>
     </section>
 
-    <section>
+    <section class="section">
+        <div class="container">
         <h2 class="client-text">Постійні клієнти</h2>
-        <ul class="clients">
-        <li class="clients-title">
+        <ul class="clients list">
+        <li>
             <img src="./images/group.svg">
         </li>
-        <li class="clients-title">
+        <li>
             <img src="./images/company.svg.svg">
         </li>
-        <li class="clients-title">
+        <li>
             <img src="./images/object1.svg.svg">
         </li>
-        <li class="clients-title">
+        <li>
             <img src="./images/group2.svg.svg">
         </li>
-        <li class="clients-title">
+        <li>
             <img src="./images/group3.svg.svg">
         </li>
-        <li class="clients-title">
+        <li>
             <img src="./images/object.svg.svg">
         </li>
-        
         <ul>
+        </div>
     </section>
     </main>
 
@@ -173,3 +174,28 @@
 </body>
 </html>
     </html>
+
+    <ul class="socials">
+        <li class="socials-item">
+        <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
+            <img src="./images/icon/ins.svg.svg" alt="instagram" />
+        </a>
+    </ul>
+    <ul class="socials">
+        <li class="socials-item">
+            <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
+                <img src="./images/icon/twit.svg.svg" alt="twitter" />
+            </a>
+    </ul>
+    <ul class="socials">
+        <li class="socials-item">
+            <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
+                <img src="./images/icon/face.svg.svg" alt="facebook" />
+            </a>
+    </ul>
+    <ul class="socials">
+        <li class="socials-item">
+            <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
+                <img src="./images/icon/linkedin.svg.svg" alt="linkedin" />
+            </a>
+    </ul>
