--- a/index.html
+++ b/index.html
@@ -101,24 +101,24 @@
                 <li class="team-people">
                     <img class="image" src="images/img(3).jpg" alt="Ігор Дем'яненко - Product Designer"
                         width="270" />
-                    <h3 class="team-title">Ігор Дем'яненко</h3>
-                    <p class="text-team">Product Designer</p>
+                    <h3 class="description-title">Ігор Дем'яненко</h3>
+                    <p class="description">Product Designer</p>
                 </li>
                 <li class="team-people">
                     <img class="image" src="images/img(4).jpg" alt="Ольга Рєпіна - Frontend Developer"
                         width="270" />
-                    <h3 class="team-title">Ольга Рєпіна</h3>
-                    <p class="text-team">Frontend Developer</p>
+                    <h3 class="description-title">Ольга Рєпіна</h3>
+                    <p class="description">Frontend Developer</p>
                 </li>
                 <li class="team-people">
                     <img class="image" src="images/img(5).jpg" alt="Микола Тарасов - Marketing" width="270" />
-                    <h3 class="team-title">Микола Тарасов</h3>
-                    <p class="text-team">Marketing</p>
+                    <h3 class="description-title">Микола Тарасов</h3>
+                    <p class="description">Marketing</p>
                 </li>
                 <li class="team-people">
                     <img class="image" src="images/img(6).jpg" alt="Михало Єрмаков - UI Designer" width="270" />
-                    <h3 class="team-title">Михало Єрмаков</h3>
-                    <p class="text-team">UI Designer</p>
+                    <h3 class="description-title">Михало Єрмаков</h3>
+                    <p class="description">UI Designer</p>
                 </li>
             </ul>
         </div>
@@ -126,9 +126,9 @@
 
     <section class="section">
         <div class="container">
-        <h2 class="client-text">Постійні клієнти</h2>
+        <h2 class="client-title">Постійні клієнти</h2>
         <ul class="clients list">
-        <li>
+        <li class="clients-img">
             <img src="./images/group.svg">
         </li>
         <li>
