--- a/index.html
+++ b/index.html
@@ -83,68 +83,163 @@
     
 
     <!--Примітка-->
-        <section class="section">
+        <section class="section team-background">
             <div class="container">
-             <h2 class="section-title work-title">Чим ми займаємося</h2>
-            <ul class="work list">
-            <li class="item"><img src="./images/img.jpg" alt="друкує код" width="370"></li>
-            <li class="item"><img src="./images/img(1).jpg" alt="тримає телефон" width="370"></li>
-            <li class="item"><img src="./images/img(2).jpg" alt="тримає планшет" width="370"></li>
-         </ul>
-         </div>
+                <h2 class="section-title team-title">Наша команда</h2>
+                <ul class="team list">
+                    <li class="item">
+                        <img class="image" src="./images/img(3).jpg" alt="Ігор Дем'яненко - Frontend Designer" width="270" />
+                        <h3 class="title">Ігор Дем'яненко</h3>
+                        <p class="text">Frontend Designer</p>
+                        <ul class="list socials">
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-instagram" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
+                                    <svg class="icon icon-twitter" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-facebook" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-linkedin" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    <li class="item">
+                        <img class="image" src="./images/img(4).jpg" alt="Ольга Рєпіна - Frontend Developer"
+                            width="270" />
+                        <h3 class="title">Ольга Рєпіна</h3>
+                        <p class="text">Frontend Developer</p>
+                        <ul class="list socials">
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-instagram" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
+                                    <svg class="icon icon-twitter" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-facebook" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-linkedin" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="item">
+                        <img class="image" src="./images/img(5).jpg" alt="Микола Тарасов - Marketing" width="270" />
+                        <h3 class="title">Микола Тарасов</h3>
+                        <p class="text">Marketing</p>
+                        <ul class="list socials">
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-instagram" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
+                                    <svg class="icon icon-twitter" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-facebook" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-linkedin" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
+                    </li>
+                    <li class="item">
+                        <img class="image" src="./images/img(6).jpg" alt="Михайло Єрмаков" width="270" />
+                        <h3 class="title">Михайло Єрмаков</h3>
+                        <p class="text">UI Designer</p>
+                        <ul class="list socials">
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-instagram" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#">
+                                    <svg class="icon icon-twitter" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                                    </svg></a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-facebook" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                            <li>
+                                <a class="team-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                        class="icon icon-linkedin" width="20" height="20">
+                                        <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                                    </svg>
+                                </a>
+                            </li>
+                        </ul>
         </section>
-    <!--Вчителі-->
-    <section class="section section-team">
-        <div class="container">
-            <h2 class="title-team">Наша команда</h2>
-            <ul class="list team">
-                <li class="team-people">
-                    <img class="image" src="images/img(3).jpg" alt="Ігор Дем'яненко - Product Designer"
-                        width="270" />
-                    <h3 class="description-title">Ігор Дем'яненко</h3>
-                    <p class="description">Product Designer</p>
-                </li>
-                <li class="team-people">
-                    <img class="image" src="images/img(4).jpg" alt="Ольга Рєпіна - Frontend Developer"
-                        width="270" />
-                    <h3 class="description-title">Ольга Рєпіна</h3>
-                    <p class="description">Frontend Developer</p>
-                </li>
-                <li class="team-people">
-                    <img class="image" src="images/img(5).jpg" alt="Микола Тарасов - Marketing" width="270" />
-                    <h3 class="description-title">Микола Тарасов</h3>
-                    <p class="description">Marketing</p>
-                </li>
-                <li class="team-people">
-                    <img class="image" src="images/img(6).jpg" alt="Михало Єрмаков - UI Designer" width="270" />
-                    <h3 class="description-title">Михало Єрмаков</h3>
-                    <p class="description">UI Designer</p>
-                </li>
-            </ul>
-        </div>
-    </section>
-
     <section class="section">
         <div class="container">
         <h2 class="client-title">Постійні клієнти</h2>
         <ul class="clients list">
-        <li class="clients-img">
-            <img src="./images/group.svg">
+        <li class="page-item">
+            <img class="page" src="./images/group.svg">
+        </li>
+        <li class="page-item">
+            <img class="page" src="./images/company.svg.svg">
+        </li>
+        <li class="page-item">
+            <img  class="page" src="./images/object1.svg.svg">
+        </li>
+        <li class="page-item">
+            <img class="page" src="./images/group2.svg.svg">
+        </li>
+        <li class="page">
+            <img class="page" src="./images/group3.svg.svg">
         </li>
         <li>
-            <img src="./images/company.svg.svg">
-        </li>
-        <li>
-            <img src="./images/object1.svg.svg">
-        </li>
-        <li>
-            <img src="./images/group2.svg.svg">
-        </li>
-        <li>
-            <img src="./images/group3.svg.svg">
-        </li>
-        <li>
-            <img src="./images/object.svg.svg">
+            <img class="page" src="./images/object.svg.svg">
         </li>
         <ul>
         </div>
@@ -174,28 +269,3 @@
 </body>
 </html>
     </html>
-
-    <ul class="socials">
-        <li class="socials-item">
-        <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
-            <img src="./images/icon/ins.svg.svg" alt="instagram" />
-        </a>
-    </ul>
-    <ul class="socials">
-        <li class="socials-item">
-            <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
-                <img src="./images/icon/twit.svg.svg" alt="twitter" />
-            </a>
-    </ul>
-    <ul class="socials">
-        <li class="socials-item">
-            <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
-                <img src="./images/icon/face.svg.svg" alt="facebook" />
-            </a>
-    </ul>
-    <ul class="socials">
-        <li class="socials-item">
-            <a href="#" class="social-item-link" target="_blank" rel="noopener noreferrer ">
-                <img src="./images/icon/linkedin.svg.svg" alt="linkedin" />
-            </a>
-    </ul>
