--- a/index.html
+++ b/index.html
@@ -26,9 +26,16 @@
         </nav>
         <ul class="contact list">
         <li class="item">
-        <a class="link mail" href="mailto:info@devstudio.com">info@devstudio.com</a>
+        <a class="link mail" href="mailto:info@devstudio.com">
+            <svg class="icon icon-mail" width="16" height="12">
+                <use xlink:href="./images/sprite2.svg#icon-mailcvg"></use>
+            </svg>
+            info@devstudio.com</a>
         </li>
-        <li class="item"><a class="link tel" href="tel:+380961111111">+38 096 111 11 11</a></li>
+        <li class="item"><a class="link tel" href="tel:+380961111111">
+            <svg class="icon icon-tel" width="16" height="12">
+                <use xlink:href="./images/sprite2.svg#icon-telsvg"></use>
+            </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
         </header>
@@ -221,27 +228,46 @@
         </section>
     <section class="section">
         <div class="container">
-        <h2 class="client-title">Постійні клієнти</h2>
-        <ul class="clients list">
-        <li class="page-item">
-            <img class="page" src="./images/group.svg">
-        </li>
-        <li class="page-item">
-            <img class="page" src="./images/company.svg.svg">
-        </li>
-        <li class="page-item">
-            <img  class="page" src="./images/object1.svg.svg">
-        </li>
-        <li class="page-item">
-            <img class="page" src="./images/group2.svg.svg">
-        </li>
-        <li class="page">
-            <img class="page" src="./images/group3.svg.svg">
-        </li>
-        <li>
-            <img class="page" src="./images/object.svg.svg">
-        </li>
-        <ul>
+            <h2 class="section-title customers">Постійні клієнти</h2>
+            <ul class="customers-list list">
+                <li>
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#">
+                        <svg
+                            class="icon icon-client1" width="106" height="60">
+                            <use xlink:href="./images/sprite1.svg#icon-one"></use>
+                        </svg></a>
+                </li>
+                <li>
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                            class="icon icon-client2" width="106" height="60">
+                            <use xlink:href="./images/sprite1.svg#icon-two"></use>
+                        </svg></a>
+                </li>
+                <li>
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                            class="icon icon-client3" width="106" height="60">
+                            <use xlink:href="./images/sprite1.svg#icon-three"></use>
+                        </svg></a>
+                </li>
+                <li>
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                            class="icon icon-client4" width="106" height="60">
+                            <use xlink:href="./images/sprite1.svg#icon-four"></use>
+                        </svg></a>
+                </li>
+                <li>
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                            class="icon icon-client5" width="106" height="60">
+                            <use xlink:href="./images/sprite1.svg#icon-five"></use>
+                        </svg></a>
+                </li>
+                <li>
+                    <a class="customers-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                            class="icon icon-client6" width="106" height="60">
+                            <use xlink:href="./images/sprite1.svg#icon-six"></use>
+                        </svg></a>
+                </li>
+            </ul>
         </div>
     </section>
     </main>
@@ -261,10 +287,46 @@
                         <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="item-tell"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+
                 </ul>
             </address>
+
         </div>
+    
+        
+<div class="social">
+    <h2 class="social-title">Приєднуйтесь</h2>
+<ul class="list socials">
+    <li>
+        <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg
+                class="icon icon-instagram" width="20" height="20">
+                <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+            </svg></a>
+    </li>
+    <li>
+        <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#">
+            <svg class="icon icon-twitter" width="20" height="20">
+                <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+            </svg></a>
+    </li>
+    <li>
+        <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg class="icon icon-facebook"
+                width="20" height="20">
+                <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+            </svg>
+        </a>
+    </li>
+    <li>
+        <a class="footer-social-link" target="_blank" rel="noopener noreferrer" href="#"><svg class="icon icon-linkedin"
+                width="20" height="20">
+                <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+            </svg>
+        </a>
+    </li>
+</ul>
+</div>
     </div>
+
 </footer>
 </body>
 </html>
