--- a/portfolio.html
+++ b/portfolio.html
@@ -25,13 +25,19 @@
         </ul>
         <ul class="contact list">
             <li class="item">
-                <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
+                <a class="link mail" href="mailto:info@devstudio.com">
+                    <svg class="icon icon-mail" width="16" height="12">
+                        <use xlink:href="./images/sprite2.svg#icon-mailcvg"></use>
+                    </svg>
+                    info@devstudio.com</a>
             </li>
-            <li class="item"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a>
-            </li>
+            <li class="item"><a class="link tel" href="tel:+380961111111">
+                    <svg class="icon icon-tel" width="16" height="12">
+                        <use xlink:href="./images/sprite2.svg#icon-telsvg"></use>
+                    </svg>+38 096 111 11 11</a></li>
         </ul>
         </div>
-    </header>
+        </header>
     <main>
         <section class="section">
             <div class="container">
@@ -151,6 +157,34 @@
                         <a class="link" href="mailto:info@devstudio.com">info@devstudio.com</a>
                     </li>
                     <li class="item-tell"><a class="link" href="tel:+380961111111">+38 096 111 11 11</a></li>
+                </ul>
+                <ul class="list socials">
+                    <li>
+                        <a class="team-social-footer" target="_blank" rel="noopener noreferrer" href="#"><svg
+                                class="icon icon-instagram" width="20" height="20">
+                                <use xlink:href="./images/sprite.svg#icon-inssvg" width="20" height="20"></use>
+                            </svg></a>
+                    </li>
+                    <li>
+                        <a class="team-social-footer" target="_blank" rel="noopener noreferrer" href="#">
+                            <svg class="icon icon-twitter" width="20" height="20">
+                                <use xlink:href="./images/sprite.svg#icon-twitsvg" width="20" height="20"></use>
+                            </svg></a>
+                    </li>
+                    <li>
+                        <a class="team-social-footer" target="_blank" rel="noopener noreferrer" href="#"><svg class="icon icon-facebook"
+                                width="20" height="20">
+                                <use xlink:href="./images/sprite.svg#icon-facesvg" width="20" height="20"></use>
+                            </svg>
+                        </a>
+                    </li>
+                    <li>
+                        <a class="team-social-footer" target="_blank" rel="noopener noreferrer" href="#"><svg class="icon icon-linkedin"
+                                width="20" height="20">
+                                <use xlink:href="./images/sprite.svg#icon-linkedinsvg" width="20" height="20"></use>
+                            </svg>
+                        </a>
+                    </li>
                 </ul>
             </address>
         </div>
