--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <!--Шапка сайта-->
+    <!--Шапка сайту-->
    
 
     <header class="page-header">
