--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
-    <!--Шапка сайта-->
+    <!--Шапка сайту-->
     
 
     <header class="page-header">
