--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Студія</title>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -56,29 +56,29 @@
 
         <section class="section features-section">
             <div class="container">
-                <h2 class hidden="section-title features-title">Особливості</h2>
+                <h2 hidden class="section-title features-title">Особливості</h2>
                 <ul class="features list">
                     <li class="item">
-                        <img class="pages" src="./images/antena.svg">
+                        <img class="pages" src="./images/antena.svg" alt="Увага до деталей">
                         <h3 class="title">Увага до деталей</h3>
                         <p class="text">
                             Ідейні міркування, i навіть початок повсякденної роботи з формування позиції.
                         </p>
                     </li>
                     <li class="item">
-                        <img class="pages" src="./images/time.svg.svg">
+                        <img class="pages" src="./images/time.svg.svg" alt="Пунктуальність">
                         <h3 class="title">Пунктуальність</h3>
                         <p class="text">
                             Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.
                         </p>
                     </li>
                     <li class="item">
-                        <img class="pages" src="./images/comp.svg.svg">
+                        <img class="pages" src="./images/comp.svg.svg" alt="Планування">
                         <h3 class="title">Планування</h3>
                         <p class="text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
                     <li class="item">
-                        <img class="pages" src="./images/astronaut.svg.svg">
+                        <img class="pages" src="./images/astronaut.svg.svg" alt="Сучасні технології">
                         <h3 class="title">Сучасні технології</h3>
                         <p class="text">
                             Значимість цих проблем настільки очевидна, що реалізація планових завдань.
@@ -95,7 +95,7 @@
                 <h2 class="section-title team-title">Наша команда</h2>
                 <ul class="team list">
                     <li class="item">
-                        <img class="image" src="./images/img(3).jpg" alt="Ігор Дем'яненко - Frontend Designer" width="270" />
+                        <img class="image" src="./images/img(3).jpg" alt="Ігор Дем'яненко - Frontend Designer" width="270">
                         <h3 class="title">Ігор Дем'яненко</h3>
                         <p class="text">Frontend Designer</p>
                         <ul class="list socials">
@@ -128,7 +128,7 @@
                         </ul>
                     <li class="item">
                         <img class="image" src="./images/img(4).jpg" alt="Ольга Рєпіна - Frontend Developer"
-                            width="270" />
+                            width="270">
                         <h3 class="title">Ольга Рєпіна</h3>
                         <p class="text">Frontend Developer</p>
                         <ul class="list socials">
@@ -161,7 +161,7 @@
                         </ul>
                     </li>
                     <li class="item">
-                        <img class="image" src="./images/img(5).jpg" alt="Микола Тарасов - Marketing" width="270" />
+                        <img class="image" src="./images/img(5).jpg" alt="Микола Тарасов - Marketing" width="270">
                         <h3 class="title">Микола Тарасов</h3>
                         <p class="text">Marketing</p>
                         <ul class="list socials">
@@ -191,10 +191,10 @@
                                     </svg>
                                 </a>
                             </li>
-                        </ul>
-                    </li>
+                            </ul>
+                            </li>
                     <li class="item">
-                        <img class="image" src="./images/img(6).jpg" alt="Михайло Єрмаков" width="270" />
+                        <img class="image" src="./images/img(6).jpg" alt="Михайло Єрмаков" width="270">
                         <h3 class="title">Михайло Єрмаков</h3>
                         <p class="text">UI Designer</p>
                         <ul class="list socials">
@@ -224,7 +224,11 @@
                                     </svg>
                                 </a>
                             </li>
-                        </ul>
+                        </ul>  
+                    </li>
+                </ul>
+            </div>
+                         
         </section>
     <section class="section">
         <div class="container">
