--- a/portfolio.html
+++ b/portfolio.html
@@ -8,7 +8,7 @@
     <title>Портфоліо</title>
 <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap"
     rel="stylesheet">
-    <link rel="stylesheet" href="./css/modern-normalize.css" />
+    <link rel="stylesheet" href="./css/modern-normalize.css">
     <link href="css/styles.css" rel="stylesheet" type="text/css">
 </head>
 <body>
@@ -57,7 +57,7 @@
                 <ul class="portfolio list">
                     <li class="item">
                         <a class="link" href="#">
-                            <img class="img" src="./images/ptf.jpg" alt="Технокряк" width="370" />
+                            <img class="img" src="./images/ptf.jpg" alt="Технокряк" width="370">
                             <div class="signature">
                                 <h3 class="title">Технокряк</h3>
                                 <p class="text">Веб-сайт</p>
@@ -67,7 +67,7 @@
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer">
                             <img class="img" src="./images/ptf2.jpg" alt="Постер New Orlean vs Golden Star"
-                                width="370" />
+                                width="370">
                             <div class="signature">
                                 <h3 class="title">Постер New Orlean vs Golden Star</h3>
                                 <p class="text">Дизайн</p>
@@ -76,7 +76,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer">
-                            <img class="img" src="./images/ptf3.jpg" alt="Ресторан Seafood" width="370" />
+                            <img class="img" src="./images/ptf3.jpg" alt="Ресторан Seafood" width="370">
                             <div class="signature">
                                 <h3 class="title">Ресторан Seafood</h3>
                                 <p class="text">Додаток</p>
@@ -85,7 +85,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
-                                src="./images/ptf4.jpg" alt="Проєкт Prime" width="370" />
+                                src="./images/ptf4.jpg" alt="Проєкт Prime" width="370">
                             <div class="signature">
                                 <h3 class="title">Проєкт Prime</h3>
                                 <p class="text">Маркетинг</p>
@@ -94,7 +94,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
-                                src="./images/ptf5.jpg" alt="Проєкт Boxes" width="370" />
+                                src="./images/ptf5.jpg" alt="Проєкт Boxes" width="370">
                             <div class="signature">
                                 <h3 class="title">Проєкт Boxes</h3>
                                 <p class="text">Додаток</p>
@@ -103,7 +103,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
-                                src="./images/ptf6.jpg" alt="Inspiration has no Borders" width="370" />
+                                src="./images/ptf6.jpg" alt="Inspiration has no Borders" width="370">
                             <div class="signature">
                                 <h3 class="title">Inspiration has no Borders</h3>
                                 <p class="text">Веб-сайт</p>
@@ -112,7 +112,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
-                                src="./images/ptf7.jpg" alt="Видання Limited Edition" width="370" />
+                                src="./images/ptf7.jpg" alt="Видання Limited Edition" width="370">
                             <div class="signature">
                                 <h3 class="title">Видання Limited Edition</h3>
                                 <p class="text">Дизайн</p>
@@ -121,7 +121,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
-                                src="./images/ptf8.jpg" alt="Проєкт LAB" width="370" />
+                                src="./images/ptf8.jpg" alt="Проєкт LAB" width="370">
                             <div class="signature">
                                 <h3 class="title">Проєкт LAB</h3>
                                 <p class="text">Маркетинг</p>
@@ -130,7 +130,7 @@
                     </li>
                     <li class="item">
                         <a class="link" href="#" target="_blank" rel="noopener noreferrer"><img class="img"
-                                src="./images/ptf9.jpg" alt="Growing Business" width="370" />
+                                src="./images/ptf9.jpg" alt="Growing Business" width="370">
                             <div class="signature">
                                 <h3 class="title">Growing Business</h3>
                                 <p class="text">Додаток</p>
